--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,6 @@
 theme: jekyll-theme-midnight
+description: everybody needs one
+title: a website
 show_github_link: false
+linkedin_handle: byako
+linkedin_url: https://linkedin.com/in/byako
